@@ -14,6 +14,7 @@
 * Wirecard: Send customer data in requests [davidsantoso]
 * Worldpay: Add session id attribute [shasum]
 * WePay: Build fee structure correctly [curiousepic]
+* Worldpay: Do not default address when not provided [shasum]
 
 == Version 1.62.0 (December 5, 2016)
 * AuthorizeNet: Map to standard AVSResult codes [shasum]
